<resources>
    <string name="app_name">TravelWriter</string>
    <string name="titleHint">Title</string>
    <string name="bodyHint">Body</string>
    <string name="createPostText">Create Post</string>
    <string name="saveAsDraftText">Save as Draft</string>
    <string name="welcomeText">Welcome to TravelWriter!\nPlease enter your name:</string>
    <string name="nameHint">Name</string>
    <string name="proceedButtonText">PROCEED</string>
    <string name="travel_writer">TravelWriter</string>
    <string name="addArticleButtonDescription">Go to Add Article Page</string>
    <string name="drawerDrafts">Drafts</string>
    <string name="drawerDetails">Details</string>
    <string name="drawerAbout">About</string>
    <string name="aboutPageTitle"><u>About</u></string>
    <string name="aboutText">Welcome to TravelWriter!\nHere you can write Articles about your
        travels or anything else and post them. This helps you to remember all the important
        happenings and share them with others.</string>
    <string name="deleteButtonDescription">Delete Draft</string>
    <string name="firstTimeLabel">Welcome to TravelWriter</string>
    <string name="mainLabel">TravelWriter</string>
    <string name="addArticleLabel">New Article</string>
    <string name="draftsLabel">My Drafts</string>
    <string name="aboutLabel">About TravelWriter</string>
    <string name="articleLabel">Article</string>
    <string name="detailsLabel">Details</string>
    <string name="editButtonDescription">Edit Draft</string>
    <string name="detailsTitleText"><u>Details for %1$s</u></string>
    <string name="detailsBodyText"><i>Current Drafts Made</i>: %1$d \n\n<i>Total Articles Posted</i>: %2$d</string>
</resources>