<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/addArticleFragment"
        android:name="com.example.android.travelwriter.addarticle.AddArticleFragment"
        android:label="@string/addArticleLabel">
        <action
            android:id="@+id/action_addArticleFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
        <action
            android:id="@+id/action_addArticleFragment_to_draftsFragment"
            app:destination="@id/draftsFragment"
            app:popUpTo="@id/addArticleFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="articleKey"
            android:defaultValue="-1L"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.android.travelwriter.main.MainFragment"
        android:label="@string/mainLabel">
        <action
            android:id="@+id/action_mainFragment_to_addArticleFragment"
            app:destination="@id/addArticleFragment" />
        <action
            android:id="@+id/action_mainFragment_to_articleFragment"
            app:destination="@id/articleFragment" />
        <action
            android:id="@+id/action_mainFragment_to_draftsFragment"
            app:destination="@id/draftsFragment" />
        <action
            android:id="@+id/action_mainFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_mainFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
        <action
            android:id="@+id/action_mainFragment_to_firstTimeFragment"
            app:destination="@id/firstTimeFragment"
            app:popUpTo="@id/mainFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/draftsFragment"
        android:name="com.example.android.travelwriter.drafts.DraftsFragment"
        android:label="@string/draftsLabel">
        <action
            android:id="@+id/action_draftsFragment_to_addArticleFragment"
            app:destination="@id/addArticleFragment" />
    </fragment>
    <fragment
        android:id="@+id/firstTimeFragment"
        android:name="com.example.android.travelwriter.firsttime.FirstTimeFragment"
        android:label="@string/firstTimeLabel">
        <action
            android:id="@+id/action_firstTimeFragment_to_mainFragment"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/firstTimeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/articleFragment"
        android:name="com.example.android.travelwriter.article.ArticleFragment"
        android:label="@string/articleLabel" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.android.travelwriter.AboutFragment"
        android:label="@string/aboutLabel" />
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.example.android.travelwriter.details.DetailsFragment"
        android:label="@string/detailsLabel" />
</navigation>