<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/postButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normalMargin"
            android:layout_marginTop="@dimen/normalMargin"
            android:layout_marginEnd="@dimen/normalMargin"
            android:backgroundTint="@color/green"
            android:paddingTop="@dimen/normalPadding"
            android:paddingBottom="@dimen/normalPadding"
            android:text="@string/createPostText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normalMargin"
            android:layout_marginTop="@dimen/normalMargin"
            android:layout_marginEnd="@dimen/normalMargin"
            android:ems="10"
            android:hint="@string/titleHint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normalMargin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/normalMargin"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/bodyHint"
            android:inputType="textMultiLine"
            android:maxHeight="500dp"
            android:minHeight="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTitle"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/draftButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normalMargin"
            android:layout_marginTop="@dimen/normalMargin"
            android:layout_marginEnd="@dimen/normalMargin"
            android:backgroundTint="@color/grey"
            android:paddingTop="@dimen/normalPadding"
            android:paddingBottom="@dimen/normalPadding"
            android:text="@string/saveAsDraftText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>